samples/_failures_safe/1761469709_09bd7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_887881c4.c: In function ‘main’:
./samples/SAFE/__tmp_887881c4.c:144:5: error: expected expression at end of input
  144 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_887881c4.c:144:5: error: expected declaration or statement at end of input
